src/window/snapshots/rstv__window__window__tests__joined_splitter_frame_tees_top_and_bottom.snap
---
source: src/window/window.rs
expression: screen.snapshot()
---
size: 16x6
cursor: hidden
text:
|┌───────┬──────┐|
|│AAAAAAA│BBBBBB│|
|│AAAAAAA│BBBBBB│|
|│AAAAAAA│BBBBBB│|
|│AAAAAAA│BBBBBB│|
|└───────┴──────┘|
attr:
|aaaaaaaaaaaaaaaa|
|abbbbbbbabbbbbba|
|abbbbbbbabbbbbba|
|abbbbbbbabbbbbba|
|abbbbbbbabbbbbba|
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(170,170,170) bg=RGB(0,0,170)
  b fg=RGB(0,0,0) bg=RGB(0,170,170)
