src/window/snapshots/rstv__window__window__tests__selected_window_with_scrollbar_snapshot.snap
---
source: src/window/window.rs
expression: screen.snapshot()
---
size: 24x8
cursor: hidden
text:
|╔═[■]════ Edit ══1═[↑]═╗|
|║                      ▲|
|║                      ▓|
|║                      ▓|
|║                      ▓|
|║                      ▓|
|║                      ▼|
|└─════════════════════─┘|
attr:
|aaabaaaaaaaaaaaaaaaabaaa|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|aaaaaaaaaaaaaaaaaaaaaaac|
|bbaaaaaaaaaaaaaaaaaaaabb|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,0,170)
  b fg=RGB(85,255,85) bg=RGB(0,0,170)
  c fg=RGB(0,0,170) bg=RGB(0,170,170)
